// product.proto

syntax = "proto3";

package product;

option go_package = "./pkg/product/pb";

service ProductService {
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse) {}
  rpc FindOne(FindOneRequest) returns (FindOneResponse) {}
  rpc DecreaseStock(DecreaseStockRequest) returns (DecreaseStockResponse) {}
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse) {}
  rpc ReadProduct(ReadProductRequest) returns (ReadProductResponse) {}
  rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductResponse) {}
  rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse) {}
}

message CreateProductRequest {
  string name = 1;
  string sku = 2;
  int64 stock = 3;
  int64 price = 4;
}

message CreateProductResponse {
  int64 status = 1;
  string error = 2;
  int64 id = 3;
}

message FindOneData {
  int64 id = 1;
  string name = 2;
  string sku = 3;
  int64 stock = 4;
  int64 price = 5;
}

message FindOneRequest {
  int64 id = 1;
}

message FindOneResponse {
  int64 status = 1;
  string error = 2;
  FindOneData data = 3;
}

message DecreaseStockRequest {
  int64 id = 1;
  int64 orderId = 2;
}

message DecreaseStockResponse {
  int64 status = 1;
  string error = 2;
}

message ListProductsRequest {
  string filter = 1;
  string sortBy = 2;
  string sortOrder = 3;
  int64 page = 4;
  int64 pageSize = 5;
}

message ProductData {
  int64 id = 1;
  string name = 2;
  string sku = 3;
  int64 stock = 4;
  int64 price = 5;
}

message ListProductsResponse {
  int64 status = 1;
  string error = 2;
  repeated ProductData products = 3;
  int64 total = 4;
}

message ReadProductRequest {
  int64 id = 1;
}

message ReadProductResponse {
  int64 status = 1;
  string error = 2;
  ProductData product = 3;
}

message UpdateProductRequest {
  int64 id = 1;
  string name = 2;
  string sku = 3;
  int64 stock = 4;
  int64 price = 5;
}

message UpdateProductResponse {
  int64 status = 1;
  string error = 2;
}

message DeleteProductRequest {
  int64 id = 1;
}

message DeleteProductResponse {
  int64 status = 1;
  string error = 2;
}